install: adjustments to consolidate all installed core files under /opt/core

--- a/Makefile.am
+++ b/Makefile.am
@@ -108,9 +108,9 @@ fpm -s dir -t rpm -n core \
 	-d "nftables" \
 	netns/vnoded=/usr/bin/ \
 	netns/vcmd=/usr/bin/ \
-	package/etc/core.conf=/etc/core/ \
-	package/etc/logging.conf=/etc/core/ \
-	package/examples=/opt/core/ \
+	package/etc/core.conf=/opt/core/etc/ \
+	package/etc/logging.conf=/opt/core/etc/ \
+	package/share=/opt/core/ \
 	daemon/dist/core-$(PACKAGE_VERSION)-py3-none-any.whl=/opt/core/
 endef
 
@@ -139,9 +139,9 @@ fpm -s dir -t deb -n core \
 	-d "nftables" \
 	netns/vnoded=/usr/bin/ \
 	netns/vcmd=/usr/bin/ \
-	package/etc/core.conf=/etc/core/ \
-	package/etc/logging.conf=/etc/core/ \
-	package/examples=/opt/core/ \
+	package/etc/core.conf=/opt/core/etc/ \
+	package/etc/logging.conf=/opt/core/etc/ \
+	package/share=/opt/core/ \
 	daemon/dist/core-$(PACKAGE_VERSION)-py3-none-any.whl=/opt/core/
 endef
 
@@ -172,8 +172,6 @@ $(info creating file $1 from $1.in)
 	-e 's,[@]bindir[@],$(bindir),g' \
 	-e 's,[@]PACKAGE_VERSION[@],$(PACKAGE_VERSION),g' \
 	-e 's,[@]PACKAGE_DATE[@],$(PACKAGE_DATE),g' \
-	-e 's,[@]CORE_LIB_DIR[@],$(CORE_LIB_DIR),g' \
-	-e 's,[@]CORE_STATE_DIR[@],$(CORE_STATE_DIR),g' \
 	-e 's,[@]CORE_DATA_DIR[@],$(CORE_DATA_DIR),g' \
 	-e 's,[@]CORE_CONF_DIR[@],$(CORE_CONF_DIR),g' \
 	< $1.in > $1
