docker: added missing packages for centos to avoid issues with missing killall and pidof

--- a/dockerfiles/Dockerfile.centos
+++ b/dockerfiles/Dockerfile.centos
@@ -12,6 +12,8 @@ WORKDIR /opt
 # install system dependencies
 RUN yum -y update && \
     yum install -y \
+    psmisc \
+    sysvinit-tools \
     xterm \
     git \
     sudo \
