--- a/dockerfiles/Dockerfile.centos-package
+++ b/dockerfiles/Dockerfile.centos-package
@@ -10,6 +10,8 @@ WORKDIR /opt
 # install basic dependencies
 RUN yum -y update && \
     yum install -y \
+    psmisc \
+    sysvinit-tools \
     xterm \
     git \
     sudo \
