--- a/dockerfiles/Dockerfile.centos-package
+++ b/dockerfiles/Dockerfile.centos-package
@@ -3,9 +3,6 @@ FROM centos:7
 LABEL Description="CORE CentOS Image"
 
 ENV LANG en_US.UTF-8
-ARG PROTOC_VERSION=3.19.6
-ARG VENV_PATH=/opt/core/venv
-WORKDIR /opt
 
 # install basic dependencies
 RUN yum -y update && \
@@ -36,6 +33,7 @@ RUN yum -y update && \
     yum install -y hostname
 
 # install python3.9
+WORKDIR /opt
 RUN wget https://www.python.org/ftp/python/3.9.15/Python-3.9.15.tgz && \
     tar xf Python-3.9.15.tgz && \
     cd Python-3.9.15 && \
@@ -46,8 +44,9 @@ RUN wget https://www.python.org/ftp/python/3.9.15/Python-3.9.15.tgz && \
     rm -rf Python-3.9.15
 
 # install core
-COPY core_*.rpm .
-RUN PYTHON=/usr/local/bin/python3.9 yum install -y ./core_*.rpm && \
+ARG PACKAGE_URL=https://github.com/coreemu/core/releases/latest/download/core_9.0.3_x86_64.rpm
+RUN wget ${PACKAGE_URL} && \
+    PYTHON=/usr/local/bin/python3.9 yum install -y ./core_*.rpm && \
     rm -f core_*.rpm
 
 # install ospf mdr
@@ -73,6 +72,8 @@ RUN wget -q https://adjacentlink.com/downloads/emane/emane-1.3.3-release-1.el7.x
     rm -rf emane-1.3.3-release-1
 
 # install emane python bindings
+ARG VENV_PATH=/opt/core/venv
+ARG PROTOC_VERSION=3.19.6
 RUN wget https://github.com/protocolbuffers/protobuf/releases/download/v${PROTOC_VERSION}/protoc-${PROTOC_VERSION}-linux-x86_64.zip && \
     mkdir protoc && \
     unzip protoc-${PROTOC_VERSION}-linux-x86_64.zip -d protoc && \
