--- a/dockerfiles/Dockerfile.ubuntu
+++ b/dockerfiles/Dockerfile.ubuntu
@@ -1,69 +1,87 @@
 # syntax=docker/dockerfile:1
 FROM ubuntu:22.04
-LABEL Description="CORE Docker Ubuntu Image"
-
 ENV DEBIAN_FRONTEND=noninteractive
 
 # install system dependencies
 RUN apt-get update -y && \
     apt-get install -y --no-install-recommends \
     ca-certificates \
-    git \
-    sudo \
+    xterm \
+    psmisc \
+    python3 \
+    python3-tk \
+    python3-pip \
+    python3-venv \
     wget \
-    tzdata \
-    libpcap-dev \
-    libpcre3-dev \
-    libprotobuf-dev \
-    libxml2-dev \
-    protobuf-compiler \
-    unzip \
-    uuid-dev \
     iproute2 \
     iputils-ping \
     tcpdump && \
-    apt-get autoremove -y
+    apt-get autoremove -y && \
+    rm -rf /var/lib/apt/lists/*
 
-# install core
-WORKDIR /opt
-ARG PREFIX=/usr/local
-ARG BRANCH=master
-RUN git clone https://github.com/coreemu/core && \
-    cd core && \
-    git checkout ${BRANCH} && \
-    ./setup.sh && \
-    PATH=/root/.local/bin:$PATH inv install -v -p ${PREFIX} && \
+# install ospf mdr
+RUN apt-get update -y && \
+    apt-get install -y --no-install-recommends \
+    automake \
+    gawk \
+    g++ \
+    libreadline-dev \
+    libtool \
+    make \
+    pkg-config \
+    git && \
+    git clone https://github.com/USNavalResearchLaboratory/ospf-mdr.git && \
+    cd ospf-mdr && \
+    ./bootstrap.sh && \
+    ./configure --disable-doc --enable-user=root --enable-group=root \
+        --with-cflags=-ggdb --sysconfdir=/usr/local/etc/quagga --enable-vtysh \
+        --localstatedir=/var/run/quagga && \
+    make -j$(nproc) && \
+    make install && \
     cd /opt && \
-    rm -rf ospf-mdr
+    rm -rf ospf-mdr && \
+    apt-get remove -y \
+    automake \
+    gawk \
+    g++ \
+    libreadline-dev \
+    libtool \
+    make \
+    pkg-config \
+    git && \
+    apt-get autoremove -y && \
+    rm -rf /var/lib/apt/lists/*
 
 # install emane
 ARG EMANE_RELEASE=emane-1.5.1-release-1
 ARG EMANE_PACKAGE=${EMANE_RELEASE}.ubuntu-22_04.amd64.tar.gz
-RUN wget -q https://adjacentlink.com/downloads/emane/${EMANE_PACKAGE} && \
+RUN apt-get update -y && \
+    wget -q https://adjacentlink.com/downloads/emane/${EMANE_PACKAGE} && \
     tar xf ${EMANE_PACKAGE} && \
     cd ${EMANE_RELEASE}/debs/ubuntu-22_04/amd64 && \
-    apt-get install -y ./openstatistic*.deb ./emane*.deb ./python3-emane_*.deb && \
+    rm emane-spectrum-tools*.deb emane-model-lte*.deb && \
+    rm *dev*.deb && \
+    apt-get install -y --no-install-recommends ./emane*.deb ./python3-emane_*.deb && \
     cd ../../../.. && \
     rm ${EMANE_PACKAGE} && \
-    rm -rf ${EMANE_RELEASE}
+    rm -rf ${EMANE_RELEASE} && \
+    apt-get autoremove -y && \
+    rm -rf /var/lib/apt/lists/*
+
+# install core
+WORKDIR /opt
+ARG CORE_PACKAGE=core_9.0.3_amd64.deb
+ARG PACKAGE_URL=https://github.com/coreemu/core/releases/latest/download/${CORE_PACKAGE}
+RUN apt-get update -y && \
+    wget -q ${PACKAGE_URL} && \
+    apt-get install -y --no-install-recommends ./${CORE_PACKAGE} && \
+    rm -f ${CORE_PACKAGE} && \
+    apt-get autoremove -y && \
+    rm -rf /var/lib/apt/lists/*
 
 # install emane python bindings
 ARG VENV_PATH=/opt/core/venv
-ARG PROTOC_VERSION=3.19.6
-RUN wget -q https://github.com/protocolbuffers/protobuf/releases/download/v${PROTOC_VERSION}/protoc-${PROTOC_VERSION}-linux-x86_64.zip && \
-    mkdir protoc && \
-    unzip protoc-${PROTOC_VERSION}-linux-x86_64.zip -d protoc && \
-    git clone https://github.com/adjacentlink/emane.git && \
-    cd emane && \
-    git checkout v1.5.1 && \
-    ./autogen.sh && \
-    PYTHON=${VENV_PATH}/bin/python ./configure --prefix=/usr && \
-    cd src/python && \
-    PATH=/opt/protoc/bin:$PATH make && \
-    ${VENV_PATH}/bin/python -m pip install . && \
-    cd /opt && \
-    rm -rf protoc && \
-    rm -rf emane && \
-    rm -f protoc-${PROTOC_VERSION}-linux-x86_64.zip
+COPY --from=emane-python /opt/emane-*.whl .
+RUN ${VENV_PATH}/bin/python -m pip install ./emane-*.whl
 
 WORKDIR /root
