--- a/dockerfiles/Dockerfile.ospf-mdr
+++ b/dockerfiles/Dockerfile.ospf-mdr
@@ -1,5 +1,36 @@
 # syntax=docker/dockerfile:1
-FROM ubuntu:18.04 as ospf-mdr
+FROM rockylinux:8 as ospf-rpm
+WORKDIR /opt
+RUN yum update -y && \
+    yum install -y epel-release dnf-plugins-core && \
+    yum config-manager --set-enabled powertools && \
+    yum update -y && \
+    yum install -y \
+    texinfo \
+    rpm-build \
+    texlive-base \
+    texinfo-tex \
+    texi2html \
+    readline-devel \
+    libpcap-devel \
+    ImageMagick \
+    git \
+    automake \
+    libtool \
+    pkg-config \
+    gcc-c++ \
+    libcap-devel \
+    make && \
+    git clone https://github.com/USNavalResearchLaboratory/ospf-mdr.git && \
+    cd ospf-mdr && \
+    ./bootstrap.sh && \
+    ./configure && \
+    (make -f quagga.rpm.mk build || make -f quagga.rpm.mk build) && \
+    mv .rpmbuild/RPMS/x86_64/quagga-mr-0.99*.rpm /opt/ && \
+    yum autoremove -y && \
+    yum clean all
+
+FROM ubuntu:18.04 as ospf-deb
 RUN apt-get update -y && \
     apt-get install -y --no-install-recommends \
     automake \
@@ -28,6 +59,6 @@ RUN git clone https://github.com/USNavalResearchLaboratory/ospf-mdr.git && \
     ./bootstrap.sh && \
     ./configure && \
     make -j$(nproc) && \
-    make -f quagga.deb.mk build || true
+    make -f qua.deb.mk build || true && \
     cd /opt && \
     rm -rf ospf-mdr
