fixed imports with updated isort and adjusted isort pre-commit command

--- a/daemon/.pre-commit-config.yaml
+++ b/daemon/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     name: isort
     stages: [pre-commit]
     language: system
-    entry: bash -c 'cd daemon && poetry run isort --atomic -y .'
+    entry: bash -c 'cd daemon && poetry run isort --atomic .'
     types: [python]
 
   - id: black
