fixed isort deprecated flag syntax for updated isort version

--- a/.github/workflows/daemon-checks.yml
+++ b/.github/workflows/daemon-checks.yml
@@ -22,7 +22,7 @@ jobs:
       - name: isort
         run: |
           cd daemon
-          poetry run isort -c -df .
+          poetry run isort -c --df .
       - name: black
         run: |
           cd daemon
