--- a/.github/workflows/daemon-checks.yml
+++ b/.github/workflows/daemon-checks.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v1
-      - name: Set up Python 3.12
+      - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.12
+          python-version: 3.10
       - name: install poetry
         run: |
           python -m pip install --upgrade pip
